# cake

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  lifecycle-migration-design.md  lifecycle-migration-design_OLD.md  package.xml  pyproject.toml
cake/: CMakeLists.txt  functional_node.py  package.xml
cake/cake/: __init__.py  action_server.py  base_node.py  context.py  default_qos_handlers.py  publisher.py  service.py  subscriber.py  thread.py  timer.py
cake/cake/dummy_python_node/: __init__.py  _interface.py  _parameters.py
cake/cmake/: cake_auto_interface_package.cmake  cake_auto_package.cmake  cake_codegen.cmake
cake/include/cake/: action_server.hpp  base_node.hpp  call_sync.hpp  context.hpp  default_qos_handlers.hpp  publisher.hpp  qos_helpers.hpp  service.hpp  session.hpp  subscriber.hpp  timer.hpp  to_string.hpp
cake/include/cake/old/: action_server.hpp  context.hpp  fixed_string.hpp  functional_node.hpp  subscription.hpp  thread.hpp  timer.hpp
cake/schemas/: interface.schema.yaml  parameter.schema.yaml
cake/scripts/: generate_node_interface.py
cake/scripts/templates/: node_interface.hpp.jinja2  node_interface.py.jinja2  node_registration.cpp.jinja2
cake/tests/: README.md  accept_outputs.sh  run_tests.sh  test_generate_node_interface.py
cake/tests/fixtures/: .gitignore
cake/tests/fixtures/action_clients_mixed/: expected_output.hpp  generated_output.params.yaml  input.yaml
cake/tests/fixtures/action_clients_mixed/expected_cpp/: action_clients_mixed.yaml  action_clients_mixed_interface.hpp  action_clients_mixed_interface.params.yaml  action_clients_mixed_registration.cpp
cake/tests/fixtures/action_clients_only/: expected_output.hpp  generated_output.params.yaml  input.yaml
cake/tests/fixtures/action_clients_only/expected_cpp/: action_clients_only.yaml  action_clients_only_interface.hpp  action_clients_only_interface.params.yaml  action_clients_only_registration.cpp
cake/tests/fixtures/action_clients_only/expected_python/: interface.py
cake/tests/fixtures/action_servers_mixed/: expected_output.hpp  generated_output.params.yaml  input.yaml
cake/tests/fixtures/action_servers_only/: expected_output.hpp  generated_output.params.yaml  input.yaml  test_output.hpp
cake/tests/fixtures/complex_types/: expected_output.hpp  generated_output.params.yaml  input.yaml
cake/tests/fixtures/empty_node/: expected_output.hpp  input.yaml
cake/tests/fixtures/manually_created/: expected_output.hpp  generated_output.params.yaml  input.yaml
cake/tests/fixtures/name_param_substitution/: input.yaml
cake/tests/fixtures/param_substitution/: input.yaml
cake/tests/fixtures/publishers_only/: expected_init.py  expected_interface.py  expected_output.hpp  generated_output.params.yaml  input.yaml
cake/tests/fixtures/qos_backward_compat/: expected_output.hpp  generated_output.params.yaml  input.yaml
cake/tests/fixtures/qos_custom/: expected_output.hpp  generated_output.params.yaml  input.yaml
cake/tests/fixtures/qos_predefined/: expected_init.py  expected_interface.py  expected_output.hpp  generated_output.params.yaml  input.yaml
cake/tests/fixtures/service_clients_mixed/: expected_output.hpp  input.yaml
cake/tests/fixtures/service_clients_only/: expected_output.hpp  generated_output.params.yaml  input.yaml
cake/tests/fixtures/services_default_qos/: expected_output.hpp  generated_output.params.yaml  input.yaml
cake/tests/fixtures/services_only/: expected_output.hpp  generated_output.params.yaml  input.yaml
cake/tests/fixtures/services_with_pubsub/: expected_output.hpp  input.yaml
cake/tests/fixtures/simple_node/: expected_interface.py  expected_output.hpp  input.yaml
cake/tests/fixtures/subscribers_only/: expected_interface.py  expected_output.hpp  generated_output.params.yaml  input.yaml
cake/tests/fixtures/with_parameters/: expected_interface.py  expected_output.hpp  input.yaml
cake/tests/install/: local_setup.sh  setup.sh
cake/tests/log/: latest_build
cake_example/: CMakeLists.txt  package.xml
cake_example/fake_install/: my_node.hpp
cake_example/interfaces/: external_node.yaml  transition_node.yaml
cake_example/launch/: test.launch.py
cake_example/nodes/my_node/: interface.yaml  my_node.cpp  my_node.hpp  parameters.yaml
cake_example/nodes/python_node/: interface.yaml  python_node.py
(+129 files in other folders)
